2014-04-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-search, auth-source-search-backends):
	Treat :max 0 as an indicator that a boolean return is wanted, as
	documented. Reported by Joe Bloggs.

2014-04-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-icalendar.el: Require gnus-art.

2014-04-20  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-event->org-entry)
	(gnus-icalendar--update-org-event): put event timestamp in
	the org entry body instead of the drawer.
	(gnus-icalendar-event--get-attendee-names): list of participants should
	contain even attendees without common name attribute.
	(gnus-icalendar--update-org-event): don't generate duplicates of empty
	property tags in org drawers.

2014-04-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-format-time-string): New function.

	* message.el (message-insert-formatted-citation-line): Use the original
	author's time zone to express a date string.

2014-04-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-srvr.el (gnus-tmp-how, gnus-tmp-name, gnus-tmp-where)
	(gnus-tmp-status, gnus-tmp-agent, gnus-tmp-cloud)
	(gnus-tmp-news-server, gnus-tmp-news-method, gnus-tmp-user-defined):
	Silence compiler warnings.
	(gnus-server-insert-server-line): Don't use dyn-bind var as argument.

2014-03-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el: Require url when compiling.

	* gnus-cloud.el (gnus-cloud-parse-version-1):
	Use plist-get rather than CL's getf.
	(gnus-activate-group, gnus-subscribe-group): Declare.

	* gnus-sum.el (gnus-mime-buttonize-attachments-in-header): Declare.

2014-03-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-toggle-header): Display header attachment
	buttons when toggling the header off.

2014-03-23  Daiki Ueno  <ueno@gnu.org>

	* mml2015.el (mml2015-use): Don't check the availability of GnuPG
	commands here; instead, only check if epg-config.el is available.

2014-03-23  Lars Ingebrigtsen  <larsi@gnus.org>
